java_library(
    name = "storage",
    srcs = glob([
        "*.java",
    ]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "@maven//:org_apache_httpcomponents_httpclient",
        "@maven//:org_eclipse_jetty_jetty_server",
        "@maven//:org_eclipse_jetty_jetty_servlet",
        "@maven//:org_eclipse_jetty_jetty_servlets",
        "@maven//:org_eclipse_jetty_jetty_util",
        "@maven//:org_eclipse_jetty_toolchain_jetty_servlet_api",
        "@maven//:org_mongodb_mongodb_driver_sync",
        "@maven//:org_mongodb_bson"
    ],
)
