
java_library(
    name = "storage",
    srcs = glob([
        "*.java",
    ]),
    visibility = [
        "//visibility:public",
    ],
    resources = [
        "//src/main/java/com/config:config",
    ],
    deps = [
        "@maven//:org_mongodb_bson",
        "@maven//:org_mongodb_mongodb_driver_core",
        "@maven//:org_mongodb_mongodb_driver_sync",
    ],

)
